fix(dropdown): caret alignment

--- a/app/client/stylesheets/components/pu-button.sass
+++ b/app/client/stylesheets/components/pu-button.sass
@@ -416,6 +416,9 @@
             padding-top: 11px
             padding-bottom: 11px
 
+            i
+                line-height: 38px
+
         &.pu-state-filled
             padding-right: 30px
             i.picon-times
